# chaincolor

./: .clang-format  .gitignore  README.md
bkv/: bkv.tex  bkvcolor.bib  eval.R  lecture.sty  makefile  table.tex  tablejustref.tex  tablenoref.tex
src/: CMakeCache.txt  CMakeLists.txt  Makefile  chaincolor.cpp  chaincolor.h  cmake_install.cmake  colorutil.cpp  colorutil.h  graph.cpp  graph.h  main.cpp  options.cpp  options.h  random.h  util.h
